fix: change 'keys' object structure & fix shift/caps behavior

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -270,8 +270,6 @@ a {
   border-radius: 10px;
   background-color: rgba(255, 86, 34, 0.15);
 
-  user-select: none;
-
   &__text {
     font-family: $main-font, sans-serif;
     font-size: 20px;
